--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,5 +1,41 @@
 @import "variable";
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
+}
+  
 body {
-  background-color: $body-color;
+  min-height: calc(100vh - 2 * 4vw);
+  background-image: linear-gradient(to right bottom, #22a51d, #8fb6ff);
+  background-size: cover;
+  background-repeat: no-repeat;
+  font-family: 'Nunito Sans', sans-serif;
+  font-weight: 400;
+  color: #655A56;
+  line-height: 1.6;
+}
+
+.container {
+  margin: 4vw auto;
+  max-width: 120rem;
+  background-color: #ffffff;
+  display: grid;
+  grid-template-rows: 10rem minmax(100rem, auto);
+  grid-template-columns: 1.1fr 2fr 1.1fr;
+  grid-template-areas: "head head head" "list recipe shopping";
+  border-radius: 8px;
+  box-shadow: 0 2rem 6rem 0.5rem rgba(101, 90, 86, 0.4);
+  overflow: hidden;
 }
