Add styles for shopping list section

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -2,6 +2,7 @@
 @import "sections/header";
 @import "sections/recipe";
 @import "sections/results";
+@import "sections/shopping";
 
 * {
   margin: 0;
