Fix bugs in the styles

--- a/src/sass/sections/_recipe.scss
+++ b/src/sass/sections/_recipe.scss
@@ -103,7 +103,7 @@
       width: 2.75rem;
       height: 2.75rem;
       background-image: linear-gradient(to right bottom, #22a51d, #8fb6ff);
-      font-size: medium;
+      font-size: x-large;
       color: #ffffff;
       border: none;
       border-radius: 50%;
