--- a/src/sass/sections/_results.scss
+++ b/src/sass/sections/_results.scss
@@ -6,7 +6,7 @@
     list-style: none;
   }
 
-  &__link:link,
+  &__link,
   &__link:visited {
     padding: 1.5rem 3rem;
     display: flex;
@@ -14,6 +14,7 @@
     text-decoration: none;
     border-right: 1px solid #fff;
     transition: all .3s;
+    cursor: pointer;
   }
 
   &__link:hover{
