Add styles for header in recipe and shopping list

--- a/src/sass/sections/_recipe.scss
+++ b/src/sass/sections/_recipe.scss
@@ -172,6 +172,16 @@
       color: #968B87;
       text-align: center;
     }
+
+    .heading-2 {
+      margin-bottom: 2.5rem;
+      font-size: 1.8rem;
+      font-weight: 600;
+      color: #15801e;
+      text-align: center;
+      text-transform: uppercase;
+      transform: skewY(-3deg);
+    }
   }
 
   &__by {
