Add styles for loader component

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,5 @@
 @import "components/buttons";
+@import "components/loader";
 @import "components/search";
 @import "sections/header";
 @import "sections/recipe";
