--- a/src/sass/sections/_results.scss
+++ b/src/sass/sections/_results.scss
@@ -18,12 +18,12 @@
   }
 
   &__link:hover{
-    background-color: #F9F5F3;
+    background-color: #f7f1ee;
     transform: translateY(-2px);
   }
 
   &__link--active {
-    background-color: #F9F5F3;
+    background-color: #f7f1ee;
   }
 
   &__fig {
