Change styles for recipe buttons

--- a/src/sass/sections/_recipe.scss
+++ b/src/sass/sections/_recipe.scss
@@ -78,11 +78,26 @@
   
     &--buttons {
       margin-left: 1.5rem;
+      margin-bottom: 1.2rem;
       display: flex;
-      opacity: 0;
-      visibility: hidden;
+      // opacity: 0;
+      // visibility: hidden;
       transform: translateY(5px);
       transition: all .4s;
+      
+      .btn-increase {
+        margin-left: 0.5rem;
+      }
+
+      .btn-decrease,
+      .btn-increase {
+        width: 1.8rem;
+        height: 1.8rem;
+        background-image: linear-gradient(to right bottom, #22a51d, #8fb6ff);
+        color: #ffffff;
+        border: none;
+        border-radius: 50%;
+      }
     }
   }
 
