--- a/src/sass/sections/_recipe.scss
+++ b/src/sass/sections/_recipe.scss
@@ -68,7 +68,9 @@
       margin-right: 1rem;
       width: 2rem;
       height: 2rem;
-      fill: #F59A83;
+      color: #119222;
+      display: flex;
+      font-size: large;
     }
   
     &--data {
@@ -165,7 +167,11 @@
     border: 1px solid #119222;
     color: #119222;
     border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     flex: 0 0 auto;
+    font-size: x-small;
   }
 
   &__count {
